Finalized Implementation